--- a/requirements.txt
+++ b/requirements.txt
@@ -115,7 +115,7 @@ platformdirs==2.5.4
 preshed==3.0.9
 prometheus-client==0.15.0
 prompt-toolkit==3.0.32
-psutil==5.9.4
+psutil==5.9.8
 pure-eval==0.2.2
 pyasn1==0.6.0
 pycparser==2.21
@@ -195,3 +195,4 @@ wrapt==1.16.0
 wsproto==1.2.0
 xlwt==1.3.0
 yarl==1.8.1
+pynvml==11.5.0
