--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "imageio>=2.37.0",
     "numpy>=2.3.2",
     "pandas>=2.3.1",
+    "scikit-image>=0.25.2",
     "scikit-learn>=1.7.1",
     "torch>=2.7.1",
     "torchaudio>=2.7.1",
